data/all_generated_tests/raw_wast_tests/block_IncorrectConditionEvaluation_2335.wast
;; 6. Create a block with mixed types and ensure conditions for `br_if` are logically false after type conversions (e.g., `i32.eqz`). Verify if branching happens regardless, indicating type conversion errors in conditions.

(assert_invalid
  (module (func $test-mixed-types-br_if (result i32)
    (block (result i32) 
      (i32.eqz (i64.const 1)) 
      (br_if 0 (i64.const 2))
    )
  ))
  "type mismatch"
)